# MARS

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: nav2_params.yaml  rover_nav.rviz
launch/: arm_and_go.launch.py  rover_bringup.launch.py
rover_nav/: arm_and_go.py  cmd_vel_stamper.py  zed_mavros_bridge.py
scripts/: set_ardupilot_params.py  set_origin_and_arm.py
