<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_nav</name>
  <version>0.1.0</version>
  <description>Indoor waypoint navigation for Traxxas rover with ArduPilot, ZED 2i, and Nav2</description>
  <maintainer email="tarun@todo.todo">tarun</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>mavros</depend>
  <depend>mavros_extras</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
